--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
     "react/": "https://aistudiocdn.com/react@^19.2.1/",
     "react": "https://aistudiocdn.com/react@^19.2.1",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.31.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
+    "hono/": "https://aistudiocdn.com/hono@^4.10.7/",
+    "hono": "https://aistudiocdn.com/hono@^4.10.7",
+    "@hono/node-server": "https://aistudiocdn.com/@hono/node-server@^1.19.6"
   }
 }
 </script>
