feat: 整合前后端分离架构并优化API配置
将前端应用和后端服务整合为可独立部署的架构。

后端使用Hono框架，提供高性能流式AI生成服务，并保护Prompt知识产权。
前端采用React+TailwindCSS，通过RESTful API与后端通信。

更新了API_BASE_URL配置，支持Vite环境变量、CRA环境变量及本地默认值。
优化了index.html的importmap，调整了CDN引入顺序。
更新了readme_zh.md，反映新的架构和部署指南。
重构了server/index.ts，添加了CORS中间件和健康检查路由。
升级了项目依赖。

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zh-CN">
   <head>
@@ -40,14 +41,14 @@
   <script type="importmap">
 {
   "imports": {
-    "hono": "https://aistudiocdn.com/hono@^4.10.7",
     "hono/": "https://aistudiocdn.com/hono@^4.10.7/",
-    "@hono/node-server": "https://aistudiocdn.com/@hono/node-server@^1.19.6",
+    "hono": "https://aistudiocdn.com/hono@^4.10.7",
     "react/": "https://aistudiocdn.com/react@^19.2.1/",
     "react": "https://aistudiocdn.com/react@^19.2.1",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.31.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
     "react-markdown": "https://aistudiocdn.com/react-markdown@^10.1.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/"
+    "@hono/node-server": "https://aistudiocdn.com/@hono/node-server@^1.19.6"
   }
 }
 </script>
