--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.31.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
     "react-markdown": "https://aistudiocdn.com/react-markdown@^10.1.0",
-    "@hono/node-server": "https://aistudiocdn.com/@hono/node-server@^1.19.6"
+    "@hono/node-server": "https://aistudiocdn.com/@hono/node-server@^1.19.6",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
+    "better-sqlite3": "https://aistudiocdn.com/better-sqlite3@^12.5.0"
   }
 }
 </script>
