--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
     "react-markdown": "https://aistudiocdn.com/react-markdown@^10.1.0",
     "@hono/node-server": "https://aistudiocdn.com/@hono/node-server@^1.19.6",
-    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "better-sqlite3": "https://aistudiocdn.com/better-sqlite3@^12.5.0",
     "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
-    "better-sqlite3": "https://aistudiocdn.com/better-sqlite3@^12.5.0"
+    "path": "https://aistudiocdn.com/path@^0.12.7"
   }
 }
 </script>
