feat: Add client-side security measures and server middleware
Introduces a `SecurityGuard` component for client-side protections like disabling context menus and developer tools.
Also adds server-side middleware for request rate limiting, input validation using Zod, and secure headers.
Integrates Zod into package.json and CDN imports for frontend.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
     "@hono/node-server": "https://aistudiocdn.com/@hono/node-server@^1.19.6",
     "better-sqlite3": "https://aistudiocdn.com/better-sqlite3@^12.5.0",
     "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
-    "path": "https://aistudiocdn.com/path@^0.12.7"
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "zod": "https://aistudiocdn.com/zod@^3.24.1"
   }
 }
 </script>
